--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
           {% if messages %}
           {% for message in messages %}
           <div class="row flashes">
-            <h4 class="red lighten-3 center-align">{{ message }}</h4>
+            <h4 class="purple lighten-4 center-align">{{ message }}</h4>
           </div>
           {% endfor %}
           {% endif %}
