Start adding edit functionality

--- a/static/css/dark-mode.css
+++ b/static/css/dark-mode.css
@@ -50,7 +50,7 @@
   }
 
  .individual-review-background {
-    background-color: #393C56;
+    background-color: #3e4c59;
   }
 
   footer.page-footer {
