--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %} Add Review | Horror House {% endblock %}
+{% block title %} Edit Review | Horror House {% endblock %}
 
 {% block main_heading %}
-<h1 class="custom-font header center">Add a new review</h1>
+<h1 class="custom-font header center">Edit your review</h1>
 {% endblock %}
 
 {% block content %}
@@ -12,28 +12,28 @@
     <div class="col s12 l12">
 
         <div class="overflow-form individual-review-background">
-            <form method="POST" action="{{ url_for('add') }}">
+            <form method="POST" action="{{ url_for('edit', book_id=book._id) }}">
                 <div class="row">
                     <div class="input-field col s6 l6">
-                        <input id="title" type="text" name="title" class="validate"  required>
+                        <input id="title" type="text" value="{{ book.title }}" name="title" class="validate"  required>
                         <label for="title">Title</label>
                     </div>
                     <div class="input-field col s6 l6">
-                        <input id="author" type="text" name="author" class="validate"  required>
+                        <input id="author" type="text" value="{{ book.author }}" name="author" class="validate"  required>
                         <label for="author">Author</label>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="input-field col s6 l6">
-                        <input id="affiliate" type="url" name="affiliate" class="validate tooltipped"
+                        <input id="affiliate" type="url" value="{{ book.affiliate}}" name="affiliate" class="validate tooltipped"
                             data-position="bottom" data-tooltip="Please add an affiliate link from a bookseller"
                             required>
                         <label for="affiliate">Add bookseller link</label>
                     </div>
 
                     <div class="input-field col s6 l6">
-                        <input id="image" type="url" name="image" class="validate tooltipped" data-position="bottom"
+                        <input id="image" type="url" value="{{ book.image }}" name="image" class="validate tooltipped" data-position="bottom"
                             data-tooltip="Add a .png or .jpg image sized at 500 pixels wide" required>
                         <label for="image">Add book image</label>
                     </div>
@@ -42,6 +42,7 @@
                     <div class="input-field col s12">
                         <textarea id="review" name="review" class="validate tooltipped materialize-textarea" minlength="120"
                             data-position="bottom" data-tooltip="Add a paragraph or two reviewing the book" required>
+                            {{- book.review -}}
                             </textarea>
                         <label for="review">Review</label>
                     </div>
@@ -51,7 +52,11 @@
                     <div class="input-field col s5 l6">
                         <select name="category_name" multiple>
                         {% for category in categories %}
+                            {% if category.category_name == book.category_name %}
+                            <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
+                            {% else %}
                             <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                            {% endif %}
                         {% endfor %}
                         </select>
                         <label>Categories</label>
@@ -82,7 +87,7 @@
                 </div>
 
                 <div class="center">
-                    <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" type="submit">Create review
+                    <button class="btn-large waves-effect waves-dark lighten-1 btn-styles review-btn" type="submit">Update review
                     </button>
                 </div>
 
