Connect edit review page  to post update  on MongoDB

--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -51,11 +51,11 @@
                 <div class="row">
                     <div class="input-field col s5 l6">
                         <select name="category_name" multiple>
-                        {% for category in categories %}
-                            {% if category.category_name == book.category_name %}
-                            <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
+                        {% for categories in categories %}
+                            {% if categories.category_name == book.category_name %}
+                            <option value="{{ categories.category_name }}" selected>{{ categories.category_name }}</option>
                             {% else %}
-                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                            <option value="{{ categories.category_name }}">{{ categories.category_name }}</option>
                             {% endif %}
                         {% endfor %}
                         </select>
