--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -53,7 +53,7 @@
                         <select name="category_name" multiple>
                         {% for categories in categories %}
                             {% if categories.category_name == book.category_name %}
-                            <option value="{{ categories.category_name }}" selected>{{ categories.category_name }}</option>
+                            <option value="{{ get_category.category_name }}" selected>{{ get_category.category_name }}</option>
                             {% else %}
                             <option value="{{ categories.category_name }}">{{ categories.category_name }}</option>
                             {% endif %}
@@ -64,17 +64,17 @@
 
                     <div class="col s7 l6">
                         <br>
-                        <label>Rate (Optional)</label>
+                        <!-- <label>Rate (Optional)</label> -->
                         <div class="star-input rate-padding">
-                            <input type="checkbox" name="rating" id="st5" title="5 stars" value="5" />
+                            <input type="radio" name="rating" id="st5" title="5 stars" value="5"/>
                             <label for="st5"></label>
-                            <input type="checkbox" name="rating" id="st4" title="4 stars" value="4" />
+                            <input type="radio" name="rating" id="st4" title="4 stars" value="4" />
                             <label for="st4"></label>
-                            <input type="checkbox" name="rating" id="st3" title="3 stars"value="3" />
+                            <input type="radio" name="rating" id="st3" title="3 stars"value="3" />
                             <label for="st3"></label>
-                            <input type="checkbox" name="rating" title="2 stars" id="st2" value="2" />
+                            <input type="radio" name="rating" title="2 stars" id="st2" value="2" />
                             <label for="st2"></label>
-                            <input type="checkbox" name="rating" title="1 star" id="st1" value="1" />
+                            <input type="radio" name="rating" title="1 star" id="st1" value="1" required/>
                             <label for="st1"></label>
                             
                             
